* Bug#7330 Set all loan increment fields to readonly if the loan has been calculated
* OTH#0000 Fix crashing tests after adding default loan sequence
* FEA#7194 Add default loan sequence at module installation
* BUG#6890 Raise an error message if the number of payment exceed the limit.
* BUG#6828 Get option end date even if the loan does not have an end date
* BUG#6563 Fix calculation of TAEA prorata according to the number of days in year
* FEA#6457 Allow to override 'latest_loan_shares' sorting way
* BUG#6458 Fix payments calculation after increment insertion
* BUG#6398 Order loan shares by loan number in contract view form

Version 1.12 - 2017-04-28

Version 1.10 - 2016-11-02
* FEA#0000 Add lender address on loan
* FEA#0000 Add lender role on party

Version 1.8 - 2016-07-06
* FEA#0000 Add outstanding amount to rule engine
* FEA#0000 Add extra data on loan
* FEA#0000 Add lender field on loan
* FEA#0000 Calculate and store early repayments on increments
* FEA#0000 Allow to use first payment end balance rather than begin balance on increments
* FEA#0000 Allow deferral on any kind of loan including graduated and balloon
* FEA#0000 Allow to recalculate increment dates from first payment date

Version 1.6 - 2015-12-23
* FEA#0000 Manage extra premium depending on remaining capital amount
* FEA#0000 Allow to insert manual increments to modify the loan at effective date (reimbursement, rate modification...)
* FEA#0000 Add warning on loan if last payment is way different from last increment payment amount
* FEA#0000 Allow to have different payment frequency during the life of the loan (one per increment)
* FEA#0000 Allow to enter the loan duration in month or year, regardless of the payment frequency

Version 1.4 - 2015-05-29
* FEA#0000 Allow user to force loan modification even if there is another active contract using it

Version 1.3 - 2015-01-22
* FEA#0000 Use workflow to compute loan payments
* FEA#0000 Use bisect to speed up payment by date finding
