@@ -14,4 +14,5 @@ xml:
     rule_engine.xml
     party.xml
     general_configuration.xml
+    offered.xml
     authorizations.xml
