@@ -1,0 +1,9 @@
+<?xml version="1.0"?>
+<!-- This file is part of Coog. The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<data>
+    <xpath expr="/form/notebook" position="before">
+        <label name="insured_outstanding_balance"/>
+        <field name="insured_outstanding_balance"/>
+    </xpath>
+</data>
