@@ -1,4 +1,5 @@
-* Bug#7330 Mettre tous les champs  des paliers d'un prêt en lecture seule si le prêt a été calculé
+* BUG#7331 Possibilitée d'ignorer des garanties dans le calcul des balances d'encours assurés
+* BUG#7330 Mettre tous les champs  des paliers d'un prêt en lecture seule si le prêt a été calculé
 * OTH#0000 Correctif des tests suite à l'ajout de la séquence de prêt par défaut
 * FEA#7194 Ajout d'une séquence de prêt par défaut à l'installation
 * BUG#6890 Ajout d'un message d'erreur quand le nombre de paiement dépasse la limite.
